--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <p><a href="my%20curriculum%20vitae.docx">click here evant info</a></p>
+  <p><a href="my%20curriculum%20vitae.docx">PLEASE CLICK HERE FOR MY CURRICULUM VITAE INFO.THANK YOU</a></p>
 </html>
